Fix Bug 323474 - Autocompletion from recent addresses needs restart to turn off

FIXED-IN: 4.11.2
BUG: 323474